# socialFastApi

./: main.py  pyproject.toml
routers/: post.py
tests/: conftest.py
tests/routers/: test_post.py
