[tool.poetry]
name = "socialfastapi"
version = "0.1.0"
description = ""
authors = ["CodeAkio <siqueira_2004@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
